javali_tests/A3/A4_keinestamSchmid/fail/Error.2.3.19.UNDEFINEDVARIABLE.javali
// Test for All referenced variables must be defined. (NO SUCH VARIABLE)
// rule 2.3.19
class Main {
int y;
	void main() {
		int x;
		z = 1;
	}
}